--- a/Clase8/css/estilo.css
+++ b/Clase8/css/estilo.css
@@ -4,6 +4,7 @@
 
 *{
     margin: 0;
+    box-sizing: border-box;
     font-family: "Open Sans", sans-serif;
     font-optical-sizing: auto;
     font-weight: 500;
