--- a/Clase8/css/estilo.css
+++ b/Clase8/css/estilo.css
@@ -20,3 +20,16 @@ header, footer {
 }
 /* para crear paletas de colores https://coolors.co/  o  https://color.adobe.com/es/ */
 
+body {
+    position: relative;
+    min-height: 100vh; /* vh es una medida relativa, tamaño de visualizacion del navegador */
+    padding-bottom: 4.5 rem;
+}
+ /* le pedimos ayuda al body para que no se pisen y que el footer cuando se hace scrol baje */
+ 
+footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 4.5rem;
+}
